# benetton-f1

./: .gitignore  Asia.cpp  Asia.h  CMakeLists.txt  COS214KalebBruwer (Containers).vpp  Car.h  Driver.cpp  Driver.h  Europe.cpp  Europe.h  EuropeTestArea.cpp  EuropeTestArea.h  European.cpp  European.h  Memento.cpp  Memento.h  NAmerica.cpp  NAmerica.h  NonEuropeTestArea.cpp  NonEuropeTestArea.h  NonEuropean.cpp  NonEuropean.h  Parts.h  PracticeGenerator.cpp  PracticeGenerator.h  QualifyingGenerator.cpp  QualifyingGenerator.h  README.md  Race.cpp  Race.h  RaceCategory.cpp  RaceCategory.h  RaceGenerator.cpp  RaceGenerator.h  RaceResults.cpp  RaceResults.h  RaceStrategy.cpp  RaceStrategy.h  Result.cpp  Result.h  (+24 more)
RacingStrategy (copy)/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
RacingStrategy (copy)/Container/: ContainerRoute.cpp  ContainerRoute.h  ContainerSet.cpp  ContainerSet.h  Destination.cpp  Destination.h  Location.h  LowPriority.cpp  LowPriority.h  PackedItem.cpp  PackedItem.h  RouteIterator.cpp  RouteIterator.h
RacingStrategy (copy)/Data/: Destinations.txt
RacingStrategy (copy)/Driver/: Driver.cpp  Driver.h
RacingStrategy (copy)/F1Car/include/: F1Builder.h  F1Car.h  RaceBuilderDir.h  TestBuilderDir.h
RacingStrategy (copy)/F1Car/src/: F1Builder.cpp  F1Car.cpp  RaceBuilderDir.cpp  TestBuilderDir.cpp
RacingStrategy (copy)/Parts/include/: AeroPart.h  Bargeboard.h  ChassisPart.h  DRS.h  ElectronicsPart.h  EnergyStore.h  EnginePart.h  MGUH.h  Part.h
RacingStrategy (copy)/Parts/src/: Bargeboard.cpp  Part.cpp
RacingStrategy (copy)/PartsFactory/include/: AFactory.h  AFactoryExperimental.h  AeroFactory.h  ChaFactory.h  ChassisFactory.h  ElecFactory.h  ElecFactoryExperimental.h  ElectronicsFactory.h  EngFactory.h  EngFactoryExperimental.h  EngineFactory.h
RacingStrategy (copy)/PartsFactory/src/: AeroFactory.cpp  ChaFactory.cpp  ChassisFactory.cpp  ElectronicsFactory.cpp  EngFactoryExperimental.cpp
RacingStrategy (copy)/R&D/include/: Engine.h  Engineering.h  ResearchAndDevelopmentDepartment.h
RacingStrategy (copy)/R&D/src/: Aerodynamics.cpp  Engine.cpp  Engineering.cpp
RacingStrategy (copy)/Race/: PracticeGenerator.cpp  PracticeGenerator.h  QualifyingGenerator.cpp  QualifyingGenerator.h  Race.cpp  Race.h  RaceGenerator.cpp  RaceGenerator.h  RaceResults.cpp  RaceResults.h  ResultOriginator.cpp  ResultOriginator.h  TimeGenerator.h  Times.cpp  Times.h
RacingStrategy (copy)/RaceWeekend/: Qualifying.cpp  Qualifying.h  Race.cpp  Race.h  RaceWeekendInterface.cpp  RaceWeekendInterface.h
RacingStrategy (copy)/Shipping/: ChartedPlane.cpp  ChartedPlane.h  HighPriority.cpp  HighPriority.h  Ship.cpp  Ship.h  Shipper.cpp  Shipper.h  TransportMode.cpp  TransportMode.h  Truck.cpp  Truck.h
RacingStrategy (copy)/Simulation/: Simulation.cpp  Simulation.h
RacingStrategy (copy)/Strategy/: RacingStrategy.cpp  RacingStrategy.h  RacingStrategyInterface.cpp  RacingStrategyInterface.h  StrategyName.cpp  StrategyName.h
RacingStrategy (copy)/TestingCenter/: EuropeTestArea.cpp  Memento.cpp  NonEuropeTestArea.cpp  State.cpp  TestingCenter.cpp  WindTunnelCounter.cpp  WindTunnelCounter.h
RacingStrategy (copy)/Track/: Asia.cpp  Asia.h  Europe.cpp  Europe.h  European.cpp  European.h  NAmerica.cpp  NAmerica.h  NonEuropean.cpp  NonEuropean.h  RaceCategory.cpp  RaceCategory.h  SAmerica.cpp  SAmerica.h  Track.cpp  Track.h  TrackContinent.cpp  TrackContinent.h  africa.cpp  africa.h
RacingStrategy (copy)/TyreFactories/: MediumTyreFactory.cpp  MediumTyreFactory.h  TyreFactory.cpp
RacingStrategy (copy)/Tyres/: HardTyre.h  MediumTyre.cpp
RacingStrategy (copy)/linux/doc/cmake/html/: index.html  searchindex.js
RacingStrategy (copy)/linux/doc/cmake/html/_static/: documentation_options.js
RacingStrategy (copy)/linux/doc/cmake/html/command/: add_compile_definitions.html  add_custom_command.html  add_definitions.html  add_dependencies.html  add_library.html  add_link_options.html  build_command.html  build_name.html  configure_file.html  continue.html  create_test_sourcelist.html  ctest_build.html  ctest_coverage.html  ctest_empty_binary_directory.html  ctest_memcheck.html  ctest_sleep.html  ctest_start.html  ctest_submit.html  ctest_update.html  define_property.html  else.html  elseif.html  enable_language.html  endfunction.html  endif.html  endmacro.html  exec_program.html  export.html  export_library_dependencies.html  find_library.html  find_path.html  foreach.html  function.html  get_cmake_property.html  get_filename_component.html  get_source_file_property.html  get_target_property.html  get_test_property.html  if.html  include.html  (+32 more)
RacingStrategy (copy)/linux/doc/cmake/html/cpack_gen/: cygwin.html  dmg.html  nuget.html  productbuild.html  wix.html
RacingStrategy (copy)/linux/doc/cmake/html/envvar/: ASM_DIALECT.html  ASM_DIALECTFLAGS.html  CC.html  CMAKE_BUILD_PARALLEL_LEVEL.html  CMAKE_CONFIG_TYPE.html  CMAKE_GENERATOR_PLATFORM.html  CMAKE_LANG_COMPILER_LAUNCHER.html  CMAKE_MSVCIDE_RUN_PATH.html  CTEST_OUTPUT_ON_FAILURE.html  CTEST_PARALLEL_LEVEL.html  CTEST_PROGRESS_OUTPUT.html  CUDAHOSTCXX.html  CXX.html  CXXFLAGS.html  DASHBOARD_TEST_FROM_CTEST.html  DESTDIR.html  FFLAGS.html  LDFLAGS.html  MACOSX_DEPLOYMENT_TARGET.html  PackageName_ROOT.html  RCFLAGS.html  SWIFTC.html  VERBOSE.html
RacingStrategy (copy)/linux/doc/cmake/html/generator/: Eclipse CDT4.html  Green Hills MULTI.html  MinGW Makefiles.html  NMake Makefiles JOM.html  NMake Makefiles.html  Ninja Multi-Config.html  Sublime Text 2.html  Unix Makefiles.html  Visual Studio 10 2010.html  Visual Studio 15 2017.html  Visual Studio 16 2019.html  Visual Studio 7 .NET 2003.html  Visual Studio 8 2005.html  Xcode.html
RacingStrategy (copy)/linux/doc/cmake/html/manual/: cmake-buildsystem.7.html  cmake-commands.7.html  cmake-developer.7.html  cmake-generator-expressions.7.html  cmake-generators.7.html  cmake-gui.1.html  cmake-modules.7.html  cmake-packages.7.html  cmake-properties.7.html  cmake-toolchains.7.html  cmake.1.html  cpack.1.html  ctest.1.html
(+2649 files in other folders)
