cmake_minimum_required(VERSION 3.13)
project(cos214)

set(CMAKE_CXX_STANDARD 17)

add_executable(cos214 src/Aerodynamics.cpp
        src/AeroFactory.cpp
        src/AeroPart.cpp
        src/Builder.cpp
        src/Chassis.cpp
        src/ChassisFactory.cpp
        src/ChassisPart.cpp
        src/Electronics.cpp
        src/ElectronicsFactory.cpp
        src/ElectronicsPart.cpp
        src/Engine.cpp
        src/Engineering.cpp
        src/EngineFactory.cpp
        src/EnginePart.cpp
        src/F1Builder.cpp
        src/F1Car.cpp
        src/Part.cpp
        src/PartsFactory.cpp
        src/RaceBuilderDir.cpp
        src/ResearchAndDevelopmentDepartment.cpp
        src/TestBuilderDir.cpp
        src/Director.cpp
        include/Aerodynamics.h
        include/AeroFactory.h
        include/AeroPart.h
        include/Builder.h
        include/Chassis.h
        include/ChassisFactory.h
        include/ChassisPart.h
        include/Electronics.h
        include/ElectronicsFactory.h
        include/ElectronicsPart.h
        include/Engine.h
        include/Engineering.h
        include/EngineFactory.h
        include/EnginePart.h
        include/F1Builder.h
        include/F1Car.h
        include/Part.h
        include/PartsFactory.h
        include/RaceBuilderDir.h
        include/ResearchAndDevelopmentDepartment.h
        include/TestBuilderDir.h
        include/Director.h
        src/ElecFactory.cpp
        include/ElecFactory.h
        src/ElecFactoryExperimental.cpp
        include/ElecFactoryExperimental.h
        src/EngFactory.cpp
        include/EngFactory.h
        src/EngFactoryExperimental.cpp
        include/EngFactoryExperimental.h
        include/ChaFactoryExperimental.h
        src/ChaFactoryExperimental.cpp
        include/ChaFactory.h
        src/ChaFactory.cpp
        include/AFactoryExperimental.h
        src/AFactoryExperimental.cpp
        include/AFactory.h
        src/AFactory.cpp
        src/Bargeboard.cpp
        include/Bargeboard.h
        src/DRS.cpp
        include/DRS.h
        src/ICE.cpp
        include/ICE.h
        src/TurboCharger.cpp
        include/TurboCharger.h
        src/ChassisPart.cpp
        include/ChassisPart.h
        src/ERS.cpp include/ERS.h
        src/MGUH.cpp
        include/MGUH.h
        src/MGUK.cpp
        include/MGUK.h
        src/EnergyStore.cpp
        include/EnergyStore.h
        )