cmake_minimum_required(VERSION 3.13)
project(cos214)

set(CMAKE_CXX_STANDARD 17)

add_executable(cos214 R&D/src/Aerodynamics.cpp
        PartsFactory/src/AeroFactory.cpp
        Parts/src/AeroPart.cpp
        R&D/src/Chassis.cpp
        PartsFactory/src/ChassisFactory.cpp
        Parts/src/ChassisPart.cpp
        R&D/src/Electronics.cpp
        PartsFactory/src/ElectronicsFactory.cpp
        Parts/src/ElectronicsPart.cpp
        R&D/src/Engine.cpp
        R&D/src/Engineering.cpp
        PartsFactory/src/EngineFactory.cpp
        Parts/src/EnginePart.cpp
        F1Car/src/F1Builder.cpp
        F1Car/src/F1Car.cpp
        Parts/src/Part.cpp
        F1Car/src/RaceBuilderDir.cpp
        R&D/src/ResearchAndDevelopmentDepartment.cpp
        F1Car/src/TestBuilderDir.cpp
        R&D/include/Aerodynamics.h
        PartsFactory/include/AeroFactory.h
        Parts/include/AeroPart.h
        R&D/include/Chassis.h
        PartsFactory/include/ChassisFactory.h
        Parts/include/ChassisPart.h
        R&D/include/Electronics.h
        PartsFactory/include/ElectronicsFactory.h
        Parts/include/ElectronicsPart.h
        R&D/include/Engine.h
        R&D/include/Engineering.h
        PartsFactory/include/EngineFactory.h
        Parts/include/EnginePart.h
        F1Car/include/F1Builder.h
        F1Car/include/F1Car.h
        Parts/include/Part.h
        PartsFactory/include/PartsFactory.h
        F1Car/include/RaceBuilderDir.h
        R&D/include/ResearchAndDevelopmentDepartment.h
        F1Car/include/TestBuilderDir.h
        PartsFactory/src/ElecFactory.cpp
        PartsFactory/include/ElecFactory.h
        PartsFactory/src/ElecFactoryExperimental.cpp
        PartsFactory/include/ElecFactoryExperimental.h
        PartsFactory/src/EngFactory.cpp
        PartsFactory/include/EngFactory.h
        PartsFactory/src/EngFactoryExperimental.cpp
        PartsFactory/include/EngFactoryExperimental.h
        PartsFactory/include/ChaFactoryExperimental.h
        PartsFactory/src/ChaFactoryExperimental.cpp
        PartsFactory/include/ChaFactory.h
        PartsFactory/src/ChaFactory.cpp
        PartsFactory/include/AFactoryExperimental.h
        PartsFactory/src/AFactoryExperimental.cpp
        PartsFactory/include/AFactory.h
        PartsFactory/src/AFactory.cpp
        Parts/src/Bargeboard.cpp
        Parts/include/Bargeboard.h
        Parts/src/DRS.cpp
        Parts/include/DRS.h
        Parts/src/ICE.cpp
        Parts/include/ICE.h
        Parts/src/TurboCharger.cpp
        Parts/include/TurboCharger.h
        Parts/src/ChassisPart.cpp
        Parts/include/ChassisPart.h
        Parts/src/ERS.cpp Parts/include/ERS.h
        Parts/src/MGUH.cpp
        Parts/include/MGUH.h
        Parts/src/MGUK.cpp
        Parts/include/MGUK.h
        Parts/src/EnergyStore.cpp
        Parts/include/EnergyStore.h
        )