cmake_minimum_required(VERSION 3.16)
project(RacingStrategy)

set(CMAKE_CXX_STANDARD 14)

add_executable(RacingStrategy
        Tyres/Tyre.cpp
        Tyres/Tyre.h
        Tyres/SoftTyre.cpp
        Tyres/SoftTyre.h
        Tyres/MediumTyre.cpp
        Tyres/MediumTyre.h
        Tyres/HardTyre.cpp
        Tyres/HardTyre.h
        TyreFactories/TyreFactory.cpp
        TyreFactories/TyreFactory.h
        Strategy/RacingStrategy.cpp
        Strategy/RacingStrategy.h
        TyreFactories/SoftTyreFactory.cpp
        TyreFactories/SoftTyreFactory.h
        TyreFactories/MediumTyreFactory.cpp
        TyreFactories/MediumTyreFactory.h
        TyreFactories/HardTyreFactory.cpp
        TyreFactories/HardTyreFactory.h
        Strategy/StrategyName.cpp
        Strategy/StrategyName.h
        Strategy/RacingStrategyInterface.cpp
        Strategy/RacingStrategyInterface.h
        F1Car/include/F1Builder.h
        F1Car/include/F1Car.h
        F1Car/include/RaceBuilderDir.h
        F1Car/include/TestBuilderDir.h
        F1Car/src/F1Builder.cpp
        F1Car/src/F1Car.cpp
        F1Car/src/RaceBuilderDir.cpp
        F1Car/src/TestBuilderDir.cpp
        Parts/include/AeroPart.h
        Parts/include/Bargeboard.h
        Parts/include/ChassisPart.h
        Parts/include/DRS.h
        Parts/include/ElectronicsPart.h
        Parts/include/EnergyStore.h
        Parts/include/EnginePart.h
        Parts/include/ERS.h
        Parts/include/ICE.h
        Parts/include/MGUH.h
        Parts/include/MGUK.h
        Parts/include/Part.h
        Parts/include/TurboCharger.h
        Parts/src/AeroPart.cpp
        Parts/src/Bargeboard.cpp
        Parts/src/ChassisPart.cpp
        Parts/src/DRS.cpp
        Parts/src/ElectronicsPart.cpp
        Parts/src/EnergyStore.cpp
        Parts/src/EnginePart.cpp
        Parts/src/ERS.cpp
        Parts/src/ICE.cpp
        Parts/src/MGUH.cpp
        Parts/src/MGUK.cpp
        Parts/src/Part.cpp
        Parts/src/TurboCharger.cpp
        PartsFactory/include/AeroFactory.h
        PartsFactory/include/AFactory.h
        PartsFactory/include/AFactoryExperimental.h
        PartsFactory/include/ChaFactory.h
        PartsFactory/include/ChaFactoryExperimental.h
        PartsFactory/include/ChassisFactory.h
        PartsFactory/include/ElecFactory.h
        PartsFactory/include/ElecFactoryExperimental.h
        PartsFactory/include/ElectronicsFactory.h
        PartsFactory/include/EngFactory.h
        PartsFactory/include/EngFactoryExperimental.h
        PartsFactory/include/EngineFactory.h
        PartsFactory/include/PartsFactory.h
        PartsFactory/src/AeroFactory.cpp
        PartsFactory/src/AFactory.cpp
        PartsFactory/src/AFactoryExperimental.cpp
        PartsFactory/src/ChaFactory.cpp
        PartsFactory/src/ChaFactoryExperimental.cpp
        PartsFactory/src/ChassisFactory.cpp
        PartsFactory/src/ElecFactory.cpp
        PartsFactory/src/ElecFactoryExperimental.cpp
        PartsFactory/src/ElectronicsFactory.cpp
        PartsFactory/src/EngFactory.cpp
        PartsFactory/src/EngFactoryExperimental.cpp
        PartsFactory/src/EngineFactory.cpp
        R&D/include/Aerodynamics.h
        R&D/include/Chassis.h
        R&D/include/Electronics.h
        R&D/include/Engine.h
        R&D/include/Engineering.h
        R&D/include/ResearchAndDevelopmentDepartment.h
        R&D/src/Aerodynamics.cpp
        R&D/src/Chassis.cpp
        R&D/src/Electronics.cpp
        R&D/src/Engine.cpp
        R&D/src/Engineering.cpp
        R&D/src/ResearchAndDevelopmentDepartment.cpp
        Simulation/Result.cpp
        Simulation/Result.h
        Simulation/Simulation.cpp
        Simulation/Simulation.h
        Track/africa.cpp
        Track/africa.h
        Track/Asia.cpp
        Track/Asia.h
        Track/Europe.cpp
        Track/Europe.h
        Track/European.cpp
        Track/European.h
        Track/NAmerica.cpp
        Track/NAmerica.h
        Track/NonEuropean.cpp
        Track/NonEuropean.h
        Track/RaceCategory.cpp
        Track/RaceCategory.h
        Track/SAmerica.cpp
        Track/SAmerica.h
        Track/Track.cpp
        Track/Track.h
        Track/TrackContinent.cpp
        Track/TrackContinent.h
        TestingCenter/EuropeTestArea.cpp
        TestingCenter/EuropeTestArea.h
        TestingCenter/Memento.cpp
        TestingCenter/Memento.h
        TestingCenter/NonEuropeTestArea.cpp
        TestingCenter/NonEuropeTestArea.h
        TestingCenter/State.cpp
        TestingCenter/State.h
        TestingCenter/TestingCenter.cpp
        TestingCenter/TestingCenter.h
        TestingCenter/WindTunnelCounter.cpp
        TestingCenter/WindTunnelCounter.h
        Driver/Driver.cpp
        Driver/Driver.h
        Race/PracticeGenerator.cpp
        Race/PracticeGenerator.h
        Race/QualifyingGenerator.cpp
        Race/QualifyingGenerator.h
        Race/Race.cpp
        Race/Race.h
        Race/RaceGenerator.cpp
        Race/RaceGenerator.h
        Race/RaceResults.cpp
        Race/RaceResults.h
        Race/ResultOriginator.cpp
        Race/ResultOriginator.h
        Race/TimeGenerator.h
        Race/Times.cpp
        Race/Times.h Race/TimeGenerator.cpp
        Container/ContainerRoute.cpp
        Container/ContainerRoute.h
        Container/ContainerSet.cpp
        Container/ContainerSet.h
        Container/Destination.cpp
        Container/Destination.h
        Container/Location.cpp
        Container/Location.h
        Container/LowPriority.cpp
        Container/LowPriority.h
        Container/PackedItem.cpp
        Container/PackedItem.h
        Container/RouteIterator.cpp
        Container/RouteIterator.h
        Shipping/ChartedPlane.cpp
        Shipping/ChartedPlane.h
        Shipping/HighPriority.cpp
        Shipping/HighPriority.h
        Shipping/Ship.cpp
        Shipping/Ship.h
        Shipping/Shipper.cpp
        Shipping/Shipper.h
        Shipping/TransportMode.cpp
        Shipping/TransportMode.h
        Shipping/Truck.cpp
        Shipping/Truck.h
        Data/Destinations.txt)